--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 	<!-- the entire body must be written by student -->
 	<div class="flex-box">
 
-	<input id="block_id" placeholder="Accio ipsum dolor"/>
-  <input id="colour_id" placeholder="Accio ipsum dolor sit amet"/>
+	<input id="block_id" placeholder="Enter block id"/>
+  <input id="colour_id" placeholder="Enter colour Hexcode"/>
   <button id="change_button"  >Change</button>
   <button id="reset_button">Reset</button>
 </div>
@@ -25,6 +25,7 @@
     <div class="grid-item" id="7">7</div>
     <div class="grid-item" id="8">8</div>
     <div class="grid-item" id="9">9</div>
+    <p>Accio ipsum dolor sit amet, join course, solve assignment</p>
   </div>
 
 
