--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 	<!-- the entire body must be written by student -->
 	<div class="flex-box">
 
-	<input id="block_id" placeholder="Accio ipsum dolor sit amet"/>
-  <input id="colour_id" placeholder="Accio ipsum dolor"/>
+	<input id="block_id" placeholder="Enter your name"/>
+  <input id="colour_id" placeholder="Enter your colour id"/>
   <button id="change_button"  >Change</button>
   <button id="reset_button">Reset</button>
 </div>
@@ -27,7 +27,7 @@
     <div class="grid-item" id="9">9</div>
   </div>
 
-
+  <p>Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size.</p> 
     <script type="text/javascript" src="./script.js">
 </script>
 
